# The_Prompt_Report

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  blacklist_updated.csv  example.env  index.html  main.py  objects.inv  papers.json  pytest.ini  querycsv  requirements.txt  searchindex.js  setup.cfg  utils.py
.doctrees/: environment.pickle  how_to_code.doctree  how_to_research.doctree  index.doctree  prompt_systematic_review.doctree  using_github.doctree  using_latex.doctree
_sources/: how_to_code.rst.txt  index.rst.txt  prompt_systematic_review.rst.txt
_static/: documentation_options.js
data/: arxiv_papers_for_human_review.csv  blacklist.csv  cleaned_merged_paper_references.json  mmlu_configs.json  model_citation_counts.csv  model_citation_counts.txt  new_cleaned_merged_paper_references.json  prompt_engineering_arxiv.csv  prompt_engineering_reviewed.csv  prompts.json
docs/: Makefile  conf.py  how_to_code.rst  how_to_research.rst  index.rst  prompt_systematic_review.rst  using_github.rst  using_latex.rst
examples/: download_arxiv_query.py  download_pdfs.py  search_pe_papers.ipynb
genindex/: index.html
how_to_code/: index.html
how_to_research/: index.html
outputs/: 0_shot_context.csv  10_shot_context.csv  10_shot_cot_context.csv
papers_output/: 0-shot_prompt.json  0_shot_prompt.json  curriculum_learning_with_prompts.json  few-shot_learning.json  few-shot_prompt.json  few-shot_prompting.json  few_shot_learning.json  few_shot_prompt.json  few_shot_prompting.json  human-in-the-loop_prompting.json  in-context_learning.json  in_context_learning.json  instruction_prompting.json  jailbreak_prompt.json  large_language_model_prompting.json  llm_prompting.json  many-shot_prompt.json  many-shot_prompting.json  multimodal_prompting.json  one-shot_prompt.json  one-shot_prompting.json  one_shot_prompt.json  one_shot_prompting.json  prompt-based_methods.json  prompt-based_transfer_learning.json  prompt_a_large_language_model.json  prompt_an_llm.json  prompt_based_methods.json  prompt_engineering.json  prompt_engineering_techniques.json  prompt_injection.json  prompt_optimization.json  prompt_template.json  prompt_templating.json  prompting-based_methods.json  prompting_based_methods.json  prompting_techniques.json  transformer_model_prompts.json  zero-shot_prompt.json  zero-shot_prompting.json
prompt_systematic_review/: index.html
py-modindex/: index.html
scripts/: README.md  citations_per_technique.py  count_citations.py  count_models.py  count_tool_mentions.py  doc2vec.ipynb  download_and_process_pdfs.py  download_data_pipeline.ipynb  download_pdfs.py  eval_prompts.py  evaluate_human_agreement.ipynb  filtering_by_relevance  (+27 more)
topic-model/: README.md  pyproject.toml  run_tomotopy.py  stopwords.txt  topic_outputs-10.html  topic_outputs-25.html  topic_outputs-50.html
topic-model/detected-phrases/: phrases.json
topic-model/processed/: train.metadata.jsonl
(+121 files in other folders)
