# FILEPATH: setup.cfg

[metadata]
name = prompt_systematic_review
version = 0.1.0
author = trigaten
author_email = sanderschulhoff@gmail.com
description = a systematic review of prompting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trigaten/Prompt_Systematic_Review/
license = MIT
classifiers=
   Development Status :: 1 - Planning
   Environment :: Console
   Intended Audience :: Science/Research
   Natural Language :: English
   Programming Language :: Python :: 3
   Topic :: Scientific/Engineering :: Artificial Intelligence
   Topic :: Scientific/Engineering :: Information Analysis


[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    pandas
    requests
    matplotlib
    soup-nuts @ git+https://git@github.com/ahoho/topics.git@dev
    black
    jellyfish
    datasets
    huggingface_hub
    tika
    scipy
    networkx
    tomotopy
    

[options.packages.find]
where=src
