# FILEPATH: setup.cfg

[metadata]
name = prompt_systematic_review
version = 0.1.0
author = trigaten
author_email = sanderschulhoff@gmail.com
description = a systematic review of prompting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trigaten/Prompt_Systematic_Review/
license = MIT
classifiers=
   Development Status :: 1 - Planning
   Environment :: Console
   Intended Audience :: Science/Research
   Natural Language :: English
   Programming Language :: Python :: 3
   Topic :: Scientific/Engineering :: Artificial Intelligence
   Topic :: Scientific/Engineering :: Information Analysis


[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    pandas
    requests
    matplotlib
    soup-nuts @ git+https://git@github.com/ahoho/topics.git@dev
    datasets
    huggingface_hub
    tika
    scipy
    networkx
    tomotopy
    pytest
    jellyfish
    sphinx
    renku-sphinx-theme
    sphinx-autobuild
    openai
    tqdm
    pdfminer.six
    load_dotenv
    wordcloud
    pytest-dotenv
    python-dotenv
    black==23.10.1
    pytz==2023.3
    regex==2023.8.8
    Requests==2.31.0
    sentence_transformers==2.2.2
    tenacity==8.2.3
    tiktoken==0.5.1
    anytree==2.12.1
    urllib3<2
    acl-anthology-py
    seaborn
    

[options.packages.find]
where=src
