[tool.poetry]
name = "prompt-survey-topic-model"
version = "0.1.0"
description = "Run a topic model on the papers CSV"
authors = ["ahoho <ahoyle@wesleyan.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
soup-nuts = {git = "https://github.com/ahoho/topics.git", rev = "dev"}
tomotopy = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
